--- a/style.css
+++ b/style.css
@@ -33,10 +33,15 @@ img {
   width: 50%;
 }
 
+.color-box-container {
+  display: flex;
+}
+
 .color-box {
   width: 40px;
   height: 40px;
   margin-top: 5px;
+  margin-right: 5px;
 }
 
 .cart {
